# demos

./: .gitignore  agora.py  readme.txt  start.py  zego.py
agoradl/: CMakeLists.txt  readme.txt
agoradl/agora/include/: AgoraBase.h  IAgoraLog.h  IAgoraMediaEngine.h  IAgoraRtcChannel.h  IAgoraRtcEngine.h
agoradl/agora/lib/: agora_rtc_sdk.lib
agoradl/src/: AGEngineEventHandler.cpp  AGExtInfoManager.cpp  AgVideoBuffer.cpp  AgoraObject.cpp  CircleBuffer.cpp  ExtendAudioFrameObserver.cpp  ExtendVideoFrameObserver.cpp  dllmain.cpp  json_value.cpp
agoradl/src/include/: AGEngineEventHandler.h  AGEventDef.h  AGExtInfoManager.h  AgVideoBuffer.h  AgoraObject.h  CircleBuffer.h  ExtendAudioFrameObserver.h  ExtendVideoFrameObserver.h  MessageID.h  globalhead.h  types.h
zegodl/: CMakeLists.txt  readme.txt
zegodl/src/: AGExtInfoManager.cpp  ZegoCustomVideoSourceBase.h  ZegoCustomVideoSourceContext.cpp  ZegoCustomVideoSourceContext.h  ZegoCustomVideoSourceImage.cpp  ZegoCustomVideoSourceImage.h  ZegoCustomVideoSourceMedia.cpp  ZegoCustomVideoSourceMedia.h  ZegoEventHandler.cpp  ZegoObject.cpp  dllmain.cpp  json_reader.cpp  json_value.cpp
zegodl/src/include/: AGExtInfoManager.h  ZegoEventHandler.h  ZegoObject.h  types.h
zegodl/zego/include/: ZegoExpressDefines.h  ZegoExpressErrorCode.h  ZegoExpressEventHandler.h  ZegoExpressInterface.h  ZegoExpressSDK.h
zegodl/zego/include/internal/: ZegoInternalAudioEffectPlayer.hpp  ZegoInternalBase.h  ZegoInternalBridge.h  ZegoInternalCallbackImpl.hpp  ZegoInternalEngineImpl.hpp  (+2 more)
zegodl/zego/lib/: ZegoExpressEngine.lib
(+19 files in other folders)
